--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
   </head>
   <body>
-    <h1>dont sleep</h1>
-    <div id="app"></div>
+    <div class="content">
+      <h1 id="title" class="txt-center">dont sleep</h1>
+      <div id="count"></div>
+    </div>
     <script type="module" src="main.js"></script>
   </body>
 </html>
