--- a/src/index.html
+++ b/src/index.html
@@ -4,11 +4,29 @@
     <title>dont sleep</title>
     <link rel="stylesheet" href="style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="./favicon/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./favicon/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="./favicon/favicon-16x16.png"
+    />
+    <link rel="manifest" href="./favicon/site.webmanifest" />
   </head>
   <body>
     <div class="content">
       <h1 id="title" class="txt-center">dont sleep</h1>
-      <div id="count"></div>
+      <div id="count" class="txt-center"></div>
     </div>
     <script type="module" src="main.js"></script>
   </body>
