--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,12 @@
   <body>
     <div class="content">
       <h1 id="title" class="txt-center">dont sleep</h1>
-      <div id="count" class="txt-center"></div>
+      <div id="msg" class="txt-center">
+        <p id="counter-text">
+          You have been here for <span id="counter">0</span> seconds.
+        </p>
+        <p id="error" class="hidden">Refresh the page plz.</p>
+      </div>
     </div>
     <script type="module" src="main.js"></script>
   </body>
